--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/xshotD/xshotD.github.io/issues"
   },
-  "homepage": "https://github.com/xshotD/xshotD.github.io#readme"
+  "homepage": "https://github.com/xshotD/xshotD.github.io#readme",
+  "dependencies": {
+    "semantic-ui": "^2.2.10"
+  }
 }
